--- a/app/src/main/res/layout/activity_assessment_detailed.xml
+++ b/app/src/main/res/layout/activity_assessment_detailed.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="60dp"
         android:text="Assessment Goal:"
+        app:layout_constraintEnd_toEndOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -36,9 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="120dp"
         android:text="Assessment Type:"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="210dp" />
+        app:layout_constraintTop_toBottomOf="@+id/assessTitleDet" />
 
     <TextView
         android:id="@+id/assessTypeDet"
@@ -49,12 +51,12 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView22"
         app:layout_constraintStart_toEndOf="@+id/textView22"
         app:layout_constraintTop_toTopOf="@+id/textView22"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <CheckBox
         android:id="@+id/goalAlert"
         android:layout_width="66dp"
-        android:layout_height="31dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="28dp"
         android:text="Alert"
         app:layout_constraintBottom_toBottomOf="@+id/assessGoalDet"
@@ -68,6 +70,7 @@
         android:layout_marginStart="76dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView23"
+        app:layout_constraintEnd_toEndOf="@+id/assessTypeDet"
         app:layout_constraintStart_toEndOf="@+id/textView23"
         app:layout_constraintTop_toTopOf="@+id/textView23"
         app:layout_constraintVertical_bias="0.0" />
