--- a/app/src/main/res/layout/activity_course_detailed.xml
+++ b/app/src/main/res/layout/activity_course_detailed.xml
@@ -7,7 +7,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".CourseDetailedActivity"
         tools:layout_editor_absoluteY="81dp">
 
@@ -28,9 +28,11 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:text="Start Date:"
-            tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="104dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
         <TextView
             android:id="@+id/textView21"
@@ -38,39 +40,44 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="End Date:"
-            app:layout_constraintTop_toBottomOf="@+id/textView20"
-            tools:layout_editor_absoluteX="21dp" />
+            app:layout_constraintStart_toStartOf="@+id/textView20"
+            app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
         <TextView
             android:id="@+id/courseStartDate"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
             android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/textView20"
             app:layout_constraintEnd_toStartOf="@+id/alertStart"
-            app:layout_constraintHorizontal_bias="0.814"
+            app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toEndOf="@+id/textView20"
-            tools:layout_editor_absoluteY="104dp" />
+            app:layout_constraintTop_toTopOf="@+id/textView20"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/courseEndDate"
             android:layout_width="60dp"
             android:layout_height="21dp"
             android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/textView21"
             app:layout_constraintEnd_toStartOf="@+id/alertEnd"
-            app:layout_constraintHorizontal_bias="0.828"
+            app:layout_constraintHorizontal_bias="0.815"
             app:layout_constraintStart_toEndOf="@+id/textView21"
-            tools:layout_editor_absoluteY="134dp" />
+            app:layout_constraintTop_toTopOf="@+id/textView21"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ListView
             android:id="@+id/lvAssessmentsInCourse"
             android:layout_width="368dp"
             android:layout_height="195dp"
             android:layout_marginStart="21dp"
+            android:layout_marginTop="176dp"
             android:layout_marginEnd="21dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.111"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="217dp" />
+            app:layout_constraintTop_toBottomOf="@+id/courseTitle" />
 
         <TextView
             android:id="@+id/textView24"
@@ -88,33 +95,34 @@
         <Spinner
             android:id="@+id/addAssessmentSpinner"
             android:layout_width="154dp"
-            android:layout_height="29dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/lvAssessmentsInCourse"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView24"
             app:layout_constraintEnd_toEndOf="@+id/lvAssessmentsInCourse"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/lvAssessmentsInCourse" />
+            app:layout_constraintStart_toStartOf="@+id/lvAssessmentsInCourse"
+            app:layout_constraintTop_toTopOf="@+id/textView24"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/textView25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="20dp"
             android:text="Status:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/courseTitle" />
 
         <TextView
             android:id="@+id/courseStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:text="courseStatus"
-            app:layout_constraintBottom_toTopOf="@+id/courseStartDate"
+            app:layout_constraintBottom_toBottomOf="@+id/textView25"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.649"
-            app:layout_constraintStart_toEndOf="@+id/textView25" />
+            app:layout_constraintStart_toEndOf="@+id/textView25"
+            app:layout_constraintTop_toTopOf="@+id/textView25" />
 
         <Button
             android:id="@+id/btnNotes"
@@ -147,8 +155,10 @@
             android:id="@+id/lvProfessor"
             android:layout_width="368dp"
             android:layout_height="195dp"
-            tools:layout_editor_absoluteX="23dp"
-            tools:layout_editor_absoluteY="515dp" />
+            android:layout_marginTop="99dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lvAssessmentsInCourse" />
 
         <TextView
             android:id="@+id/textView28"
@@ -166,18 +176,22 @@
             android:id="@+id/alertStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:minHeight="48dp"
             android:text="Alert"
             app:layout_constraintBottom_toBottomOf="@+id/courseStartDate"
-            app:layout_constraintEnd_toEndOf="@+id/alertEnd"
-            app:layout_constraintTop_toTopOf="@+id/courseStartDate" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/courseStartDate"
+            app:layout_constraintVertical_bias="0.592" />
 
         <CheckBox
             android:id="@+id/alertEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:text="Alert"
             app:layout_constraintBottom_toBottomOf="@+id/courseEndDate"
-            app:layout_constraintEnd_toEndOf="@+id/addAssessmentSpinner"
+            app:layout_constraintEnd_toEndOf="@+id/alertStart"
             app:layout_constraintTop_toTopOf="@+id/courseEndDate" />
 
     </android.support.constraint.ConstraintLayout>
