--- a/app/src/main/res/layout/activity_terms_detailed.xml
+++ b/app/src/main/res/layout/activity_terms_detailed.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/teko_bold"
-        android:text="Term Title"
+        android:text="@string/term_title"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="End Date:"
+        android:text="@string/end_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -34,7 +34,7 @@
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Start Date:"
+        android:text="@string/start_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/termTitle" />
 
@@ -42,11 +42,10 @@
         android:id="@+id/courseEndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:text="End"
+        android:text="@string/end"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toTopOf="@+id/textView9"
         app:layout_constraintVertical_bias="0.0" />
@@ -55,7 +54,7 @@
         android:id="@+id/courseStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:text="@string/start"
         app:layout_constraintBottom_toBottomOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
@@ -71,21 +70,25 @@
         android:layout_marginTop="28dp"
         android:text="Courses:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        tools:ignore="HardcodedText" />
 
     <ListView
         android:id="@+id/lvCourseInTerm"
-        android:layout_width="395dp"
-        android:layout_height="524dp"
+        android:layout_width="347dp"
+        android:layout_height="515dp"
+        android:layout_marginTop="156dp"
         app:layout_constraintEnd_toEndOf="@+id/addCourseSpinner"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="@+id/textView13"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintTop_toBottomOf="@+id/termTitle" />
 
     <Spinner
         android:id="@+id/addCourseSpinner"
         android:layout_width="186dp"
-        android:layout_height="33dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="16dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
